<resources>
    <string name="app_name">Tea</string>
    <string name="home">首页</string>
    <string name="shop">商品</string>
    <string name="order">订单</string>
    <string name="shopCar">购物车</string>
    <string name="me">我的</string>
    <string name="search_hint">输入商品名称</string>
    <string name="good_search_hint">请输入商家名称</string>
    <string name="order_deliver">代发货确认</string>
    <string name="order_receive">待收货确认</string>
    <string name="order_audit">待订单审核</string>
    <string name="order_finance">待财务审核</string>
    <string name="order_statistics">订货统计</string>
    <string name="return_statistics">退货统计</string>
    <string name="collection_shop">收藏商品</string>
    <string name="order_recent">近期订货</string>
    <string name="bug_again">再次购买</string>
    <string name="new_goods">新品上架</string>
    <string name="hot_seller">热销商品</string>

    <string name="week">周</string>

    <string name="month">月</string>
    <string name="year">年</string>
    <string name="item_price">价格：</string>
    <string name="goto_allShops">进入全部商品</string>
    <string name="login">登录</string>
    <string name="phone_register">手机快速注册</string>
    <string name="forget_password">忘记密码?</string>
    <string name="register">注册</string>
    <string name="input_phone_number_hint">请输入格式正确的11位数字手机号</string>
    <string name="agree_register">同意用户注册协议</string>
    <string name="next_step">下一步</string>
    <string name="input_code">输入验证码</string>
    <string name="please_input_code">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="input_code_hint">提示：请将密码设置为6~20位，并且有字母、数字组成！</string>
    <string name="input_pass">输入密码</string>
    <string name="please_input_pass">请设置密码</string>


    <!--商品种类-->
    <string-array name="category">
        <item>全部商品</item>
        <item>茶叶</item>
        <item>茶具</item>
        <item>茶包装</item>
        <item>茶点</item>
    </string-array>
</resources>
