<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"></FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/split_line_color"/>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:orientation="horizontal"
            android:paddingBottom="5dp">

            <RadioButton
                android:id="@+id/home"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:drawableTop="@drawable/index"
                android:gravity="center"
                android:text="@string/home"
                android:textColor="@color/radio_text_color"
                android:textSize="@dimen/sp_16"
                />

            <RadioButton
                android:id="@+id/good"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/good_img"
                android:gravity="center"
                android:text="@string/shop"
                android:textColor="@color/radio_text_color"
                android:textSize="@dimen/sp_16"
                />

            <RadioButton
                android:id="@+id/order"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/order_img"
                android:gravity="center"
                android:text="@string/order"
                android:textColor="@color/radio_text_color"
                android:textSize="@dimen/sp_16"
                />

            <RadioButton
                android:id="@+id/shop_car"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/shop_car_img"
                android:gravity="center"
                android:text="@string/shopCar"
                android:textColor="@color/radio_text_color"
                android:textSize="@dimen/sp_16"
                />

            <RadioButton
                android:id="@+id/me"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/me_img"
                android:gravity="center"
                android:text="@string/me"
                android:textColor="@color/radio_text_color"
                android:textSize="@dimen/sp_16"
                />

        </RadioGroup>
    </LinearLayout>
</layout>