<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color_f4f4f4"
    android:orientation="vertical"
    tools:context="com.gshl.tea.activity.RegisterActivity">

    <!--top start -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/register_activity_bg">

        <ImageView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_centerVertical="true"
            android:background="@mipmap/btn_fangx"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/input_pass"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_17"

            />
    </RelativeLayout>
    <!--top end -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">


        <!--input phone number start-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/white_bg_radius"
            android:paddingLeft="10dp">

            <ImageView
                android:id="@+id/mima_icon"
                android:layout_width="20dp"
                android:layout_height="23dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:background="@mipmap/bg_mimm"
                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:inputType="numberPassword"
                android:layout_toRightOf="@id/mima_icon"
                android:background="@null"
                android:hint="@string/please_input_pass"

                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"

                android:background="@mipmap/bg_yj"/>

        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/input_code_hint"

            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/next_btn_bg"
            android:gravity="center"
            android:text="@string/next_step"
            android:textColor="@color/white"
            android:textSize="25sp"

            />
        <!--input phone number end-->
    </LinearLayout>

</LinearLayout>
