<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="str"
            type="String"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--top start-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/search_shape"
                        android:focusable="false"
                        android:hint="@string/search_hint"
                        android:paddingLeft="@dimen/search_indent"
                        android:textSize="@dimen/sp_14"
                        />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/search_icon"/>


                </RelativeLayout>

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:drawableTop="@drawable/message_icon"
                    android:gravity="center"
                    android:text="消息"
                    android:textSize="@dimen/sp_16"/>
            </LinearLayout>
            <!--top end-->

            <include layout="@layout/split_line"/>

            <!--notification start-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/notification_icon"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:text="跑马灯效果测试跑马灯效果测试跑马灯效果测试跑马灯效果测试跑马灯效果测试跑马灯效果测试"
                    />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/close_noti_icon"/>

            </LinearLayout>
            <!--notification end-->

            <!--order info start-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:background="@drawable/border_top_bottom"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/border_right"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1"
                        android:textColor="@color/black"
                        android:textSize="50sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_audit"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/sp_14"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/border_right"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2"
                        android:textColor="@color/black"
                        android:textSize="50sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_finance"
                        android:textSize="@dimen/sp_14"
                        android:textColor="@color/gray"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/border_right"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="3"
                        android:textColor="@color/black"
                        android:textSize="50sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_deliver"
                        android:textSize="@dimen/sp_14"
                        android:textColor="@color/gray"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="4"
                        android:textColor="@color/black"
                        android:textSize="50sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_receive"
                        android:textSize="@dimen/sp_14"
                        android:textColor="@color/gray"
                        />
                </LinearLayout>
            </LinearLayout>
            <!--order info end-->

            <!--chart-toggle start-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:background="@drawable/border_bottom"
                android:layout_height="50dp">
                <RadioGroup
                    android:id="@+id/icon_toggle_radio_group"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    >

                    <RadioButton
                        android:id="@+id/home"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:button="@null"
                        android:checked="true"
                        android:gravity="center"
                        android:text="@string/order_statistics"
                        android:textColor="@color/radio_text_color"
                        android:textSize="@dimen/sp_16"
                        />

                    <RadioButton
                        android:id="@+id/good"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/return_statistics"
                        android:textColor="@color/radio_text_color"
                        android:textSize="@dimen/sp_16"
                        />
                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="最近十周"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/black"
                    />
            </RelativeLayout>
            <!--chart-toggle end-->

            <!--chart start -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:background="@drawable/border_bottom"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:layout_height="200dp">
                <!--暂时弄一张图片占位-->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@mipmap/u642"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="20dp"
                    android:id="@+id/imageView"/>

            </RelativeLayout>
            <!--chart end-->

            <!--nav start-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingTop="5dp"
                android:background="@drawable/border_bottom"
                android:orientation="horizontal">
                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp">

                    <RadioButton
                        android:id="@+id/collection_shop"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:button="@null"
                        android:checked="true"
                        android:drawableTop="@mipmap/u586"
                        android:gravity="center"
                        android:text="@string/collection_shop"
                        android:textColor="@color/radio_text_color"
                        android:textSize="@dimen/sp_16"
                        />

                    <RadioButton
                        android:id="@+id/order_recent"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:button="@null"
                        android:drawableTop="@mipmap/u586"
                        android:gravity="center"
                        android:text="@string/order_recent"
                        android:textColor="@color/radio_text_color"
                        android:textSize="@dimen/sp_16"
                        />

                    <RadioButton
                        android:id="@+id/buy_again"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:button="@null"
                        android:drawableTop="@mipmap/u586"
                        android:gravity="center"
                        android:text="@string/bug_again"
                        android:textColor="@color/radio_text_color"
                        android:textSize="@dimen/sp_16"
                        />

                    <RadioButton
                        android:id="@+id/new_goods"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:button="@null"
                        android:drawableTop="@mipmap/u586"
                        android:gravity="center"
                        android:text="@string/new_goods"
                        android:textColor="@color/radio_text_color"
                        android:textSize="@dimen/sp_16"
                        />

                </RadioGroup>
            </LinearLayout>
            <!--nav end-->

            <!--hot seller start-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:text="@string/hot_seller"/>

            </LinearLayout>

            <!--hot seller end-->
        </LinearLayout>
    </ScrollView>
</layout>